refactor: split services into domain-specific modules